Use speccy for swagger.json linting
