# backend/src/models/User.ts
@@ -1,8 +1,3 @@
-export interface AuthUser {
-  username: string;
-  password: string;
-}
-
 /**
  * @tsoaModel
  */
